--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -46,21 +46,24 @@
     "bootstrap": "^3.3.7",
     "chai-properties": "^1.2.1",
     "classnames": "^2.2.5",
+    "codemirror": "^5.21.0",
     "d3-format": "^1.0.2",
     "d3-scale": "^1.0.4",
     "d3-time-format": "^2.0.3",
     "debug": "^2.2.0",
     "deep-diff": "^0.3.4",
-    "dotenv-safe": "^3.0.0",
     "depd": "^1.1.0",
+    "dotenv-safe": "^3.0.0",
     "electron-debug": "^1.0.1",
     "html-to-react": "^1.2.2",
+    "js-beautify": "^1.6.4",
     "lodash": "^4.16.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
+    "react-codemirror": "^0.3.0",
     "react-color": "^2.10.0",
     "react-dom": "^15.3.2",
     "react-grid-layout": "^0.13.8",
