--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -66,11 +66,11 @@
     "react-bootstrap": "^0.30.5",
     "react-codemirror": "^0.3.0",
     "react-color": "^2.10.0",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.2",
     "react-grid-layout": "^0.13.8",
     "react-redux": "^4.4.5",
     "react-select": "^1.0.0-rc.2",
-    "react-sizeme": "^2.2.0",
     "react-stockcharts": "^0.6.0-beta.11",
     "redux": "^3.6.0",
     "redux-electron-store": "^0.4.1",
