--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -54,52 +54,8 @@
   "keywords": [],
   "dependencies": {
     "ajv": "~4.11.2",
-    "async": "~2.1.4",
-    "bootstrap": "~3.3.7",
-    "chai-properties": "~1.2.1",
-    "classnames": "~2.2.5",
-    "codemirror": "~5.23.0",
-    "d3-array": "^1.1.1",
-    "d3-axis": "^1.0.4",
-    "d3-format": "~1.0.2",
-    "d3-scale": "~1.0.4",
-    "d3-selection": "^1.0.3",
-    "d3-time-format": "~2.0.3",
-    "debug": "~2.6.0",
-    "deep-diff": "~0.3.4",
-    "electron-debug": "~1.1.0",
-    "element-resize-event": "^2.0.7",
-    "html-to-react": "~1.2.2",
-    "htmlhint": "~0.9.13",
-    "js-beautify": "~1.6.8",
-    "lockfile": "~1.0.3",
-    "lodash": "~4.17.4",
-    "long": "^3.2.0",
-    "mkdirp": "~0.5.1",
-    "moment": "~2.17.1",
-    "react": "~15.4.2",
-    "react-bootstrap": "~0.30.5",
-    "react-codemirror": "~0.3.0",
-    "react-color": "~2.11.1",
-    "react-dom": "~15.4.2",
-    "react-flatpickr": "~3.0.0",
-    "react-grid-layout": "~0.13.8",
-    "react-json-inspector": "^7.0.0",
-    "react-panelgroup": "^1.0.2",
-    "react-redux": "~5.0.2",
-    "react-select": "~1.0.0-rc.2",
-    "react-treebeard": "^1.1.4",
-    "redux": "~3.6.0",
-    "redux-electron-store": "~0.4.1",
-    "redux-form": "~6.5.0",
-    "redux-thunk": "~2.2.0",
-    "reselect": "~2.5.4",
-    "source-map-support": "~0.4.2",
-    "updeep": "~1.0.0",
-    "uuid": "~3.0.1"
-  },
-  "devDependencies": {
     "asar": "~0.13.0",
+    "async": "~2.1.4",
     "babel-core": "~6.22.1",
     "babel-eslint": "~7.1.1",
     "babel-jest": "~18.0.0",
@@ -115,17 +71,28 @@
     "babel-preset-react-optimize": "~1.0.1",
     "babel-preset-stage-0": "~6.22.0",
     "babel-register": "~6.22.0",
+    "bootstrap": "~3.3.7",
     "chai": "~3.5.0",
+    "chai-properties": "~1.2.1",
+    "classnames": "~2.2.5",
+    "codemirror": "~5.23.0",
     "css-loader": "~0.26.1",
+    "d3-array": "^1.1.1",
+    "d3-axis": "^1.0.4",
+    "d3-format": "~1.0.2",
+    "d3-scale": "~1.0.4",
+    "d3-selection": "^1.0.3",
+    "d3-time-format": "~2.0.3",
+    "deep-diff": "~0.3.4",
     "deep-freeze": "~0.0.1",
     "del": "~2.2.2",
     "devtron": "~1.4.0",
     "electron": "1.4.15",
+    "electron-debug": "~1.1.0",
     "electron-devtools-installer": "~2.1.0",
     "electron-packager": "~8.5.1",
     "electron-rebuild": "~1.5.7",
-    "enzyme": "~2.7.0",
-    "enzyme-to-json": "~1.4.5",
+    "element-resize-event": "^2.0.7",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "~14.0.0",
     "eslint-config-airbnb-base": "^11.1.1",
@@ -141,13 +108,21 @@
     "fbjs-scripts": "~0.7.1",
     "file-loader": "~0.10.0",
     "gc-watch": "^0.1.1",
+    "html-to-react": "~1.2.2",
+    "htmlhint": "~0.9.13",
     "identity-obj-proxy": "~3.0.0",
     "jest": "~18.1.0",
+    "js-beautify": "~1.6.8",
     "jsdom": "~9.9.1",
     "json-loader": "~0.5.4",
     "less": "~2.7.1",
     "less-loader": "~2.2.3",
+    "lockfile": "~1.0.3",
+    "lodash": "~4.17.4",
+    "long": "^3.2.0",
+    "mkdirp": "~0.5.1",
     "mocha": "~3.2.0",
+    "moment": "~2.17.1",
     "nyc": "~10.1.2",
     "postcss": "~5.2.5",
     "postcss-browser-reporter": "~0.5.0",
@@ -158,14 +133,34 @@
     "postcss-reporter": "~3.0.0",
     "postcss-smart-import": "~0.6.0",
     "postcss-url": "~5.1.2",
+    "react": "~15.4.2",
     "react-addons-test-utils": "~15.4.2",
+    "react-bootstrap": "~0.30.5",
+    "react-codemirror": "~0.3.0",
+    "react-color": "~2.11.1",
+    "react-dom": "~15.4.2",
+    "react-flatpickr": "~3.0.0",
+    "react-grid-layout": "~0.13.8",
+    "react-json-inspector": "^7.0.0",
+    "react-panelgroup": "^1.0.2",
+    "react-redux": "~5.0.2",
+    "react-select": "~1.0.0-rc.2",
     "react-test-renderer": "~15.4.1",
+    "react-treebeard": "^1.1.4",
+    "redux": "~3.6.0",
+    "redux-electron-store": "~0.4.1",
+    "redux-form": "~6.5.0",
     "redux-logger": "~2.8.0",
+    "redux-thunk": "~2.2.0",
+    "reselect": "~2.5.4",
     "rimraf": "~2.5.4",
     "sinon": "~1.17.6",
     "sinon-chai": "^2.8.0",
+    "source-map-support": "~0.4.2",
     "spectron": "~3.5.0",
     "style-loader": "~0.13.1",
+    "updeep": "~1.0.0",
+    "uuid": "~3.0.1",
     "webpack": "~1.14.0",
     "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "~1.9.0",
