--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.vscode/settings.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.vscode/settings.json
@@ -1,5 +1,11 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-    "editor.tabSize": 2,
-    "editor.detectIndentation": false
+  "editor.tabSize": 2,
+  "javascript.validate.enable": false,
+  "search.exclude": {
+      "node_modules/": true,
+      "main*": true,
+      ".nyc_output/": true,
+      "coverage/": true
+  }
 }
