--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.vscode/settings.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.vscode/settings.json
@@ -1,6 +1,8 @@
 // Place your settings in this file to overwrite default and user settings.
 {
-  "editor.tabSize": 2,
+  "[javascript]": {
+    "editor.tabSize": 2
+  },
   "javascript.validate.enable": false,
   "search.exclude": {
       "node_modules/": true,
