--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -61,12 +61,15 @@
     "benchmark:grizzly": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/grizzly.benchmark.js",
     "benchmark:textview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/textview.benchmark.js",
     "benchmark:mimicview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/mimicview.benchmark.js",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "staged-precommit-hook": "unset GIT_DIR; ./scripts/staged-precommit-hook.sh"
   },
   "lint-staged": {
     "gitDir": "../../../../../../../",
     "linters": {
-      "*.js": ["eslint", "git add"]
+      "*.{js,jsx}": [
+        "staged-precommit-hook"
+      ]
     }
   },
   "bin": {
