--- a/src/impl/catalogs_stub/pom.xml
+++ b/src/impl/catalogs_stub/pom.xml
@@ -2,34 +2,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.cnes.lpisis.gpcc</groupId>
-  <artifactId>gpcchs_e_vis_stub_builder</artifactId>
+  <artifactId>gpcchs_catalogs_stub</artifactId>
   <packaging>pom</packaging>
   <version>1.1.2-R8S4-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis</groupId>
-    <artifactId>isis-system</artifactId>
+    <artifactId>isis-parent</artifactId>
     <version>1.1.2-R8S4-SNAPSHOT</version>
     <relativePath/>
   </parent>
-  <modules>
-    <module>src/timebar/pom_stubs.xml</module>
-  </modules>
+  <properties>
+    <isis.rpm.parent>GPVI_CATALOGS_STUB</isis.rpm.parent>
+  </properties>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-install-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <descriptors>
+                <descriptor>src/main/assembly/package.xml</descriptor>
+              </descriptors>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
