--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -31,8 +31,9 @@
     "package:electron": "cd dist && electron-packager . --no-prune --overwrite --no-tmpdir",
     "clean": "rimraf ./dist stats.json ./coverage ./scripts/lint-reporter/*.csv",
     "clean:cache": "rimraf .eslintcache",
-    "hello": "npm run link && npm run install:adapters && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
+    "hello": "npm run clone:gpds && npm run link && npm run install:adapters && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
     "hello:no-rtd": "npm run link:common && npm run install:adapters && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
+    "clone:gpds": "./scripts/cloneGPDS.sh",
     "link:common": "npm link ../../../../../common/src/main/js/common && (cd ../../../../../common/src/main/js/common && npm install)",
     "link:rtd": "npm link ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && (cd ../../../../../../../../GPDS/src/api/js/rtd/src/main/js/rtd/ && npm install)",
     "link": "npm run link:common && npm run link:rtd",
