--- a/GPCCHS_E_VIS/pom.xml
+++ b/GPCCHS_E_VIS/pom.xml
@@ -4,12 +4,12 @@
   <groupId>fr.cnes.lpisis.gpcc</groupId>
   <artifactId>gpcchs_e_vis_builder</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.2</version>
+  <version>2.0.0-R10S1-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis</groupId>
     <artifactId>isis-system</artifactId>
-    <version>1.1.2</version>
+    <version>2.0.0-R10S1-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <modules>
