--- a/GPCCHS_E_VIS/src/launcher/pom.xml
+++ b/GPCCHS_E_VIS/src/launcher/pom.xml
@@ -5,12 +5,12 @@
   <groupId>fr.cnes.lpisis.gpcc.js</groupId>
   <artifactId>gpcchs_e_vis_launcher</artifactId>
   <packaging>isis-js-bundle</packaging>
-  <version>1.1.2</version>
+  <version>2.0.0-R10S1-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcchs_e_vis-parent</artifactId>
-    <version>1.1.2</version>
+    <version>2.0.0-R10S1-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <properties>
