--- a/src/impl/parent/pom.xml
+++ b/src/impl/parent/pom.xml
@@ -4,12 +4,12 @@
   <groupId>fr.cnes.lpisis.gpcc</groupId>
   <artifactId>gpcchs-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.2</version>
+  <version>2.0.0-R10S1-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcchs-system</artifactId>
-    <version>1.1.2</version>
+    <version>2.0.0-R10S1-SNAPSHOT</version>
     <relativePath>../system</relativePath>
   </parent>
   <properties>
