--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -102,6 +102,7 @@
     "babel-preset-react-optimize": "~1.0.1",
     "babel-preset-stage-0": "~6.22.0",
     "babel-register": "~6.24.0",
+    "bignumber.js": "^4.1.0",
     "bootstrap": "~3.3.7",
     "classnames": "~2.2.5",
     "codemirror": "~5.25.0",
