--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -63,6 +63,7 @@
     "benchmark:grizzly": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/grizzly.benchmark.js",
     "benchmark:textview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/textview.benchmark.js",
     "benchmark:mimicview": "HOT=1 electron -r babel-register -r babel-polyfill benchmarks/mimicview.benchmark.js",
+    "prepush": "npm run test && echo Lint all files... && npm run lint",
     "precommit": "lint-staged",
     "staged-precommit-hook": "unset GIT_DIR; ./scripts/staged-precommit-hook.sh"
   },
